<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="177dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="91dp"
                android:layout_height="105dp"
                android:layout_weight="0"
                android:contentDescription="@string/appointment_book"
                app:srcCompat="@drawable/littlebook" />

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="105dp"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/Appointment_Book_Application"
                android:textColor="#0A0A0A"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/AppoinmentBookHomescreen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:text="TextView"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/getAllButton"
                android:layout_width="164dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:text="@string/Get_All_Appointments" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <Button
                android:id="@+id/search_button"
                android:layout_width="103dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:text="@string/Search" />

            <EditText
                android:id="@+id/beginDateRangeText"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/endDateRangeText"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/getAllByOwnerButton"
                android:layout_width="142dp"
                android:layout_height="36dp"
                android:layout_weight="0"
                android:contentDescription="@string/Enter_Owner_Name"
                android:text="@string/Get_By_Owner" />

            <EditText
                android:id="@+id/getByOwnerEntered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:contentDescription="@string/Enter_Owner_Name"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/createButton"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_weight="0"
                android:text="@string/Create_An_Appointment" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ownerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:contentDescription="@string/Enter_Owner_Name"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/descriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:contentDescription="@string/Enter_Description"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/startDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:contentDescription="@string/Enter_Start_Time"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/endDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:contentDescription="@string/Enter_End_Time"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>